src/test/deca/context/invalid/class/method/double_decl2.deca
// Description:
//      Double déclaration de méthode avec retour différent
//
// Resultats:
//      double definition of method m

class C {
	float m() {
	}

	int m() {
	}
}

{

}
